@@ -41,6 +41,7 @@
         - Introduce pagination panel.
         - Support for inactive buttongroup items.
         - Support default values for state.
+        - Introduce state manager (#119).
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
